@@ -1883,16 +1883,16 @@ class Connection(object):
             return version.decode("utf-8")
 
 
-    def get_protocol_version(self):
+    def get_protocol_version_name(self):
         """
         Obtain the protocol version of the current connection.
 
         :returns: The TLS version of the current connection, for example
-            the value for TLS 1.2 would be ``TLSv1.2``.
+            the value for TLS 1.2 would be ``b'TLSv1.2'``.
         :rtype: :py:class:`unicode`
         """
-        version = _ffi.string(_lib.SSL_get_version(self._ssl))
-        return version.decode("utf-8")
+        version = _lib.SSL_get_version(self._ssl)
+        return version
 
 
     @_requires_npn
